<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/internet_provider_survey"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewClientNumber"
            android:layout_width="114dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@string/client_number"
            android:textAlignment="viewStart" />

        <Space
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1" />

        <EditText
            android:id="@+id/editTextShowClients"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_weight="1"
            android:ems="1"
            android:gravity="left"
            android:inputType="textPersonName" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="114dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@string/providers" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.1" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="32dp"
            android:layout_weight="1">

            <RadioButton
                android:id="@+id/rdbBell"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bell" />

            <RadioButton
                android:id="@+id/rdbVideotron"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/videotron" />

            <RadioButton
                android:id="@+id/rdbAcanac"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/acanac" />

            <RadioButton
                android:id="@+id/rdbBravo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bravo" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:text="@string/save" />

        <Button
            android:id="@+id/btnStat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:text="@string/statistics" />
    </LinearLayout>


</LinearLayout>